Ready for the 1st review

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         name="viewport" 
         content="width=device-width, initial-scale=1.0"
     />
-	
-	<title>
-    </title>
-	
+
     <meta 
         name="description" 
         content="" 
@@ -25,12 +22,46 @@
         name="keywords" 
         content="" 
     />
+
+    <title>
+        Neon
+    </title>
+
+    <link
+        rel="stylesheet"
+        href="css/style.css"
+        type="text/css"
+    />
+
+
+    <link href="https://fonts.googleapis.com/css?family=Monda" rel="stylesheet">
 	
 </head>
 
 <body>
 
-    <div></div>
-	
+    <button>WYŁĄCZ</button>
+    <ul>
+        <li>W</li>
+        <li>E</li>
+        <li>B</li>
+        <li>S</li>
+        <li>A</li>
+        <li>M</li>
+        <li>U</li>
+        <li>R</li>
+        <li>A</li>
+        <li>J</li>
+        <li>.</li>
+        <li>P</li>
+        <li>L</li>
+    </ul>
+
+    <script
+    src="js/script.js"
+    type="text/javascript"
+    >
+    </script>
+    
 </body>
 </html>
